--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "graphql": "^16.10.0",
-    "jsforce": "^3.7.0"
+    "jsforce": "^2.0.0-beta.28"
   }
 }
